--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             others.It is an interactive medium where students can engage the
             teachers just from the comfort of their homes.
           </p>
-          <a href="#"
+          <a href="signup.html"
             >Join Now
             <span class="material-symbols-outlined"> arrow_forward </span>
           </a>
@@ -486,7 +486,7 @@
           workshop,</small
         >
         <small>prototyping, marketing strategy, landing page, Ux/UI?</small>
-        <p><a href="#">Register now</a></p>
+        <p><a href="signup.html">Register now</a></p>
       </div>
 
       <div class="sellin-section">
@@ -523,7 +523,7 @@
       </div>
       <div class="apply-section">
         <h1>Ready to start a journey with us?</h1>
-        <a href="#"
+        <a href="signup.html"
           >Apply Online
           <span class="material-symbols-outlined"> arrow_forward </span>
         </a>
